welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: forward reference extends over definition of variable ColorCase
	if (ColorCase) leveBrosse;
            ^