welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
	if (ColorCase) leveBrosse;
	var ColorCase=false
	getCouleurSol() match{
		case Color.green => ColorCase=true
		case _ => recule;
	}
	return ColorCase
}